// System Kart Podarunkowych – ERD
// Wklej zawartość tego pliku na https://dbdiagram.io aby wygenerować diagram
// Eksport: File → Export to PNG/PDF

Project GiftCardSystem {
  database_type: 'PostgreSQL'
  Note: 'System Kart Podarunkowych – praca inżynierska'
}

// ─────────────────────────────────────────────
// TENANTS – wielodostępność (SaaS)
// ─────────────────────────────────────────────
Table tenants {
  id                       varchar(36)  [pk, note: 'UUID']
  name                     varchar(255) [not null]
  email                    varchar(255) [unique, not null]
  nip                      varchar(20)  [not null, note: 'Polski NIP']
  address_street           varchar(255) [not null]
  address_city             varchar(100) [not null]
  address_postal_code      varchar(20)  [not null]
  address_country          varchar(100) [not null]
  phone_number             varchar(30)  [not null]
  representative_first_name varchar(100) [not null]
  representative_last_name  varchar(100) [not null]
  api_key                  varchar(64)  [unique, not null]
  api_secret               varchar(255) [not null]
  status                   varchar(20)  [not null, note: 'ACTIVE | SUSPENDED | CANCELLED']
  created_at               datetime     [not null]
  suspended_at             datetime     [null]
  cancelled_at             datetime     [null]
  allowed_redirect_domain  varchar(255) [null, note: 'OAuth redirect domain']

  Note: 'Najemca systemu (firma korzystająca z platformy)'
}

// ─────────────────────────────────────────────
// USERS – administratorzy panelu
// ─────────────────────────────────────────────
Table users {
  id             varchar(36)  [pk, note: 'UUID']
  email          varchar(255) [unique, not null]
  password_hash  varchar(255) [not null]
  role           varchar(20)  [not null, note: 'OWNER | ADMIN | STAFF']
  is_active      boolean      [not null, default: true]
  created_at     datetime     [not null]
  deactivated_at datetime     [null]

  Note: 'Użytkownicy panelu administracyjnego'
}

// ─────────────────────────────────────────────
// GIFT_CARDS_READ – projekcja CQRS (Read Model)
// ─────────────────────────────────────────────
Table gift_cards_read {
  id                   uuid         [pk, note: 'UUID agregatu GiftCard']
  tenant_id            varchar(36)  [not null, ref: > tenants.id]
  balance_amount       int          [not null, note: 'Saldo w groszach']
  balance_currency     varchar(3)   [not null, note: 'ISO 4217 (PLN, EUR…)']
  initial_amount       int          [not null]
  initial_currency     varchar(3)   [not null]
  status               varchar(20)  [not null, note: 'INACTIVE | ACTIVE | EXPIRED | DEPLETED | CANCELLED | SUSPENDED']
  expires_at           timestamptz  [null]
  created_at           timestamptz  [not null]
  activated_at         timestamptz  [null]
  suspended_at         timestamptz  [null]
  cancelled_at         timestamptz  [null]
  expired_at           timestamptz  [null]
  depleted_at          timestamptz  [null]
  suspension_duration  int          [not null, default: 0, note: 'Łączny czas zawieszenia [s]']
  card_number          varchar(12)  [unique, null, note: 'Numer karty fizycznej']
  pin                  varchar(8)   [null]
  updated_at           timestamptz  [not null]

  indexes {
    status              [name: 'idx_gift_cards_read_status']
    tenant_id           [name: 'idx_gift_cards_read_tenant_id']
    expires_at          [name: 'idx_gift_cards_read_expires_at']
  }

  Note: 'Denormalizowana projekcja karty – aktualizowana przez Event Handlery'
}

// ─────────────────────────────────────────────
// EVENTS – Event Store (Broadway / Event Sourcing)
// ─────────────────────────────────────────────
Table events {
  id          serial       [pk]
  uuid        uuid         [not null, note: 'UUID agregatu']
  playhead    int          [not null, note: 'Nr sekwencyjny eventu dla agregatu']
  type        varchar(255) [not null, note: 'Pełna nazwa klasy eventu']
  payload     json         [not null, note: 'Dane eventu']
  metadata    json         [not null, note: 'Metadane (tenant_id, causation_id…)']
  recorded_on timestamp    [not null]

  indexes {
    (uuid, playhead) [unique, name: 'unique_uuid_playhead']
  }

  Note: 'Magazyn eventów Broadway – odtwarza stan agregatu GiftCard przez Event Sourcing'
}

// ─────────────────────────────────────────────
// ACTIVATION_REQUESTS – przepływ aktywacji karty
// ─────────────────────────────────────────────
Table activation_requests {
  id                varchar(36)   [pk, note: 'UUID']
  card_number       varchar(12)   [not null, note: 'Numer karty fizycznej']
  customer_email    varchar(255)  [not null]
  verification_code varchar(6)    [not null, note: '6-cyfrowy kod weryfikacyjny']
  verified          boolean       [not null, default: false]
  gift_card_id      varchar(36)   [null, ref: > gift_cards_read.id]
  tenant_id         varchar(36)   [not null, ref: > tenants.id]
  return_url        varchar(2048) [not null]
  callback_url      varchar(2048) [null]
  status            varchar(30)   [not null, note: 'pending_verification | verified | completed | expired']
  created_at        datetime      [not null]
  expires_at        datetime      [not null, note: 'Ważność żądania (domyślnie 15 min)']

  indexes {
    card_number  [name: 'idx_activation_card_number']
    status       [name: 'idx_activation_status']
  }

  Note: 'Żądanie aktywacji karty przez klienta (weryfikacja e-mail + kodem)'
}

// ─────────────────────────────────────────────
// CARD_ASSIGNMENTS – przypisanie karty do klienta
// ─────────────────────────────────────────────
Table card_assignments {
  id              varchar(36)  [pk, note: 'UUID']
  gift_card_id    varchar(36)  [unique, not null, ref: > gift_cards_read.id]
  tenant_id       varchar(36)  [not null, ref: > tenants.id]
  customer_email  varchar(255) [not null]
  assigned_at     datetime     [not null]

  Note: 'Trwałe powiązanie karty podarunkowej z klientem'
}

// ─────────────────────────────────────────────
// TENANT_DOCUMENTS – umowy i faktury najemcy
// ─────────────────────────────────────────────
Table tenant_documents {
  id            varchar(36)  [pk, note: 'UUID']
  tenant_id     varchar(36)  [not null, ref: > tenants.id]
  type          varchar(50)  [not null, note: 'COOPERATION_AGREEMENT | SIGNED_COOPERATION_AGREEMENT | INVOICE']
  filename      varchar(255) [not null]
  original_name varchar(255) [not null]
  mime_type     varchar(50)  [not null]
  size          int          [not null, note: 'Rozmiar w bajtach']
  storage_path  varchar(500) [not null]
  metadata      json         [null]
  created_at    datetime     [not null]

  indexes {
    tenant_id  [name: 'idx_document_tenant_id']
    type       [name: 'idx_document_type']
  }

  Note: 'Dokumenty prawne i finansowe powiązane z najemcą'
}

// ─────────────────────────────────────────────
// TENANT_WEBHOOKS – powiadomienia zewnętrzne
// ─────────────────────────────────────────────
Table tenant_webhooks {
  id          int          [pk, increment]
  tenant_id   varchar(36)  [not null, ref: > tenants.id]
  url         varchar(500) [not null]
  events      json         [not null, note: 'Tablica subskrybowanych typów eventów']
  is_active   boolean      [not null, default: true]
  secret      varchar(64)  [not null, note: 'HMAC signing secret']
  created_at  datetime     [not null]

  indexes {
    tenant_id  [name: 'idx_webhook_tenant_id']
  }

  Note: 'Endpointy HTTP powiadamiane o zdarzeniach domenowych'
}

// ─────────────────────────────────────────────
// MESSENGER_MESSAGES – dead-letter queue
// ─────────────────────────────────────────────
Table messenger_messages {
  id            bigserial    [pk]
  body          text         [not null, note: 'Serializowana wiadomość']
  headers       text         [not null]
  queue_name    varchar(190) [not null]
  created_at    timestamp    [not null]
  available_at  timestamp    [not null, note: 'Czas kolejnej próby przetworzenia']
  delivered_at  timestamp    [null, note: 'NULL → jeszcze nie dostarczona']

  indexes {
    queue_name    [name: 'idx_queue_name']
    available_at  [name: 'idx_available_at']
    delivered_at  [name: 'idx_delivered_at']
  }

  Note: 'Nieudane wiadomości Symfony Messenger (dead-letter queue)'
}
